; ModuleID = '/home/carl/AnghaBench/zfs/lib/libuutil/extr_uu_pname.c_uu_setpname.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libuutil/extr_uu_pname.c_uu_setpname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pname = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [16 x i8] c"unknown_command\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @uu_setpname(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = call i8* (...) @getexecname()
  store i8* %8, i8** @pname, align 8
  %9 = load i8*, i8** @pname, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8** @pname, align 8
  br label %12

12:                                               ; preds = %11, %7
  %13 = load i8*, i8** @pname, align 8
  store i8* %13, i8** %2, align 8
  br label %35

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %28, %14
  %16 = load i8*, i8** %3, align 8
  %17 = call i8* @strrchr(i8* %16, i8 signext 47)
  store i8* %17, i8** %4, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i8*, i8** %3, align 8
  store i8* %21, i8** @pname, align 8
  br label %33

22:                                               ; preds = %15
  %23 = load i8*, i8** %4, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 1
  %25 = load i8, i8* %24, align 1
  %26 = sext i8 %25 to i32
  %27 = icmp eq i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %22
  %29 = load i8*, i8** %4, align 8
  store i8 0, i8* %29, align 1
  br label %15

30:                                               ; preds = %22
  %31 = load i8*, i8** %4, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 1
  store i8* %32, i8** @pname, align 8
  br label %33

33:                                               ; preds = %30, %20
  %34 = load i8*, i8** @pname, align 8
  store i8* %34, i8** %2, align 8
  br label %35

35:                                               ; preds = %33, %12
  %36 = load i8*, i8** %2, align 8
  ret i8* %36
}

declare dso_local i8* @getexecname(...) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
